--- a/06A - Creating a Pipeline.ipynb
+++ b/06A - Creating a Pipeline.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Pipeline\n",
+    "# パイプラインを作成する\n",
     "\n",
-    "In the previous labs, you used the Azure Machine Learning SDK to explore the entire model training process from accessing data through to running training experiments and registering machine learning models. Up until now, you have performed the various steps required to create a machine learning solution interactively. In this lab, you'll explore automation of these steps using *pipelines*.\n",
+    "前のラボでは、Azure Machine Learning SDKを使用して、データへのアクセスからトレーニング実験の実行、機械学習モデルの登録までのモデルトレーニングプロセス全体を調査しました。これまで、機械学習ソリューションをインタラクティブに作成するために必要なさまざまな手順を実行してきました。このラボでは、*Pipeline*を使用してこれらのステップの自動化を探ります。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Data for an Experiment\n",
+    "## 実験用のデータを準備する\n",
     "\n",
-    "In this lab, you'll use a dataset containing details of diabetes patients. Run the cell below to create this dataset (if you created it in the previous lab, the code will create a new version)"
+    "このラボでは、糖尿病患者の詳細を含むデータセットを使用します。以下のセルを実行して、このデータセットを作成します（以前のラボで作成した場合、コードは新しいバージョンを作成します）"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can create the script for the first step, which will train a model. The script includes a parameter named **output_folder**, which references the folder where the trained model should be saved."
+    "これで、モデルをトレーニングする最初のステップのスクリプトを作成できます。スクリプトには、** output_folder **という名前のパラメーターが含まれています。このパラメーターは、トレーニング済みモデルを保存するフォルダーを参照します。"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The script for the second step of the pipeline will load the model from where it was saved, and then register it in the workspace. It includes a single **model_folder** parameter that contains the path where the model was saved."
+    "パイプラインの2番目のステップのスクリプトは、保存された場所からモデルをロードし、それをワークスペースに登録します。モデルが保存されたパスを含む単一の**model_folder**パラメーターが含まれます。"
    ]
   },
   {
@@ -217,11 +217,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare a Compute Environment for the Pipeline Steps\n",
+    "## パイプライン手順のコンピューティング環境を準備する\n",
     "\n",
-    "In this exercise, you'll use the same compute for both steps, but it's important to realize that each step is run independently; so you could specify different compute contexts for each step if appropriate.\n",
+    "この演習では、両方のステップで同じコンピューティングを使用しますが、各ステップが独立して実行されることを理解することが重要です。必要に応じて、ステップごとに異なる計算コンテキストを指定できます。\n",
     "\n",
-    "First, get the compute target."
+    "最初に、計算ターゲットを取得します。"
    ]
   },
   {
@@ -252,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The compute will require a Python environment with the necessary package dependencies installed, so we'll create a run configuration."
+    "計算には、必要なパッケージの依存関係がインストールされたPython環境が必要になるため、実行構成を作成します。"
    ]
   },
   {
@@ -297,11 +297,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create and Run a Pipeline\n",
+    "## パイプラインを作成して実行する\n",
     "\n",
-    "Now we're ready to create and run a pipeline.\n",
+    "これで、パイプラインを作成して実行する準備が整いました。\n",
     "\n",
-    "First we need to define the steps for the pipeline, and any data references that need to passed between them. In this case, the first step must write the model to a folder that can be read from by the second step. Since the steps will be run on remote compute (and in fact, could each be run on different compute), the folder path must be passed as a data reference to a location in a datastore within the workspace. The **PipelineData** object is a special kind of data reference that is used for interim storage locations that can be passed between pipeline steps, so we'll create one and use at as the output for the first step and the input for the second step. Note that we also need to pass it as a script argument so our code can access the datastore location referenced by the data reference."
+    "最初に、パイプラインのステップと、それらの間で渡す必要があるデータ参照を定義する必要があります。この場合、最初のステップでモデルを2番目のステップで読み取れるフォルダーに書き込む必要があります。手順はリモートコンピューティングで実行されるため（実際、それぞれ異なるコンピューティングで実行できます）、フォルダーパスをデータ参照としてワークスペース内のデータストア内の場所に渡す必要があります。 ** PipelineData **オブジェクトは、パイプラインステップ間で受け渡すことができる一時的な保存場所に使用される特別な種類のデータ参照です。そのため、1つを作成し、最初のステップの出力およびの入力として使用します。第二段階。コードがデータ参照によって参照されるデータストアの場所にアクセスできるように、スクリプト引数として渡す必要があることに注意してください。"
    ]
   },
   {
@@ -350,7 +350,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OK, we're ready to go. let's build the pipeline from the steps we've defined and run it as an experiment."
+    "OK、準備完了です。定義したステップからパイプラインを構築し、実験として実行してみましょう。"
    ]
   },
   {
@@ -381,9 +381,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The widget above shows details of the pipeline as it runs. You can also monitor pipeline runs in the **Experiments** page in [Azure Machine Learning studio](https://ml.azure.com).\n",
+    "上記のウィジェットは、実行中のパイプラインの詳細を示しています。 [Azure Machine Learning studio](https://ml.azure.com)の**Experiments**ページでパイプラインの実行を監視することもできます。\n",
     "\n",
-    "When the pipeline has finished, a new model should be registered with a *Training context* tag indicating it was trained in a pipeline. Run the following code to verify this."
+    "パイプラインが終了したら、新しいモデルを、パイプラインでトレーニングされたことを示す*Training context*タグで登録する必要があります。これを確認するには、次のコードを実行します。"
    ]
   },
   {
@@ -409,9 +409,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is a simple example, designed to demonstrate the principle. In reality, you could build more sophisticated logic into the pipeline steps - for example, evaluating the model against some test data to calculate a performance metric like AUC or accuracy, comparing the metric to that of any previously registered versions of the model, and only registering the new model if it performs better.\n",
+    "これは、原理を示すために設計された簡単な例です。実際には、より洗練されたロジックをパイプラインステップに組み込むことができます。たとえば、一部のテストデータに対してモデルを評価して、AUCや精度などのパフォーマンスメトリックを計算し、以前に登録されたモデルのバージョンとメトリックを比較し、パフォーマンスが向上した場合は、新しいモデルを登録します。\n",
     "\n",
-    "You can use the [Azure Machine Learning extension for Azure DevOps](https://marketplace.visualstudio.com/items?itemName=ms-air-aiagility.vss-services-azureml) to combine Azure ML pipelines with Azure DevOps pipelines (yes, it *is* confusing that they have the same name!) and integrate model retraining into a *continuous integration/continuous deployment (CI/CD)* process. For example you could use an Azure DevOps *build* pipeline to trigger an Azure ML pipeline that trains and registers a model, and when the model is registered it could trigger an Azure Devops *release* pipeline that deploys the model as a web service, along with the application or service that consumes the model."
+    "[Azure DevOps用のAzure Machine Learning拡張機能](https://marketplace.visualstudio.com/items?itemName=ms-air-aiagility.vss-services-azureml)を使用して、Azure MLパイプラインとAzure DevOpsパイプラインを組み合わせることができます（はい、それらが同じ名前を持っていることは*混乱*です！）モデルの再トレーニングを*継続的統合/継続的展開（CI / CD）*プロセスに統合します。たとえば、Azure DevOps *build*パイプラインを使用してモデルをトレーニングおよび登録するAzure MLパイプラインをトリガーし、モデルが登録されると、モデルをWebサービスとしてデプロイするAzure Devops *release*パイプラインをトリガーできます。モデルを使用するアプリケーションまたはサービスとともに。"
    ]
   }
  ],
