--- a/06B - Publishing a Pipeline.ipynb
+++ b/06B - Publishing a Pipeline.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Publishing a Pipeline\n",
+    "# パイプラインを公開する\n",
     "\n",
-    "In the [previous lab](labdocs/Lab06A.md), you created a pipeline. Now you're going to publish it as a service.\n",
+    "[前のラボ](labdocs/Lab06A.md)で、パイプラインを作成しました。次に、サービスとして公開します。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Publish the Pipeline\n",
+    "## パイプラインを公開する\n",
     "\n",
-    "After you've created and tested a pipeline, you can publish it as a REST service. You ran the pipeline in the [previous lab](labdocs/Lab06A.md), so you can get a reference to that run and use it to publish the pipeline."
+    "パイプラインを作成してテストしたら、RESTサービスとして公開できます。 [前のラボ](labdocs/Lab06A.md)でパイプラインを実行したため、その実行への参照を取得し、それを使用してパイプラインを公開できます。"
    ]
   },
   {
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the published pipeline has an endpoint, which you can see in the **Endpoints** page (on the **Pipeline Endpoints** tab) in [Azure Machine Learning studio](https://ml.azure.com). You can also find its URI as a property of the published pipeline object:"
+    "公開されたパイプラインにはエンドポイントがあり、[Azure Machine Learning studio](https://ml.azure.com)の**Endpoints**ページ（**Pipeline Endpoints**タブ）で確認できます。 また、公開されたパイプラインオブジェクトのプロパティとしてそのURIを見つけることもできます。:"
    ]
   },
   {
@@ -77,14 +77,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the Pipeline Endpoint"
+    "## パイプラインエンドポイントを使用する"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use the endpoint, client applications need to make a REST call over HTTP. This request must be authenticated, so an authorization header is required. A real application would require a service principal with which to be authenticated, but to test this out, we'll use the authorization header from your current connection to your Azure workspace, which you can get using the following code:"
+    "エンドポイントを使用するには、クライアントアプリケーションがHTTP経由でREST呼び出しを行う必要があります。この要求は認証される必要があるため、認証ヘッダーが必要です。実際のアプリケーションでは、認証に使用するサービスプリンシパルが必要ですが、これをテストするには、現在の接続からAzureワークスペースへの認証ヘッダーを使用します。これは、次のコードを使用して取得できます:"
    ]
   },
   {
@@ -104,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we're ready to call the REST interface. The pipeline runs asynchronously, so we'll get an identifier back, which we can use to track the pipeline experiment as it runs:"
+    "これで、RESTインターフェースを呼び出す準備ができました。パイプラインは非同期に実行されるため、識別子を取得します。これを使用して、実行中のパイプラインの実験を追跡できます:"
    ]
   },
   {
@@ -127,9 +127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we have the run ID, we can use the **RunDetails** widget to view the experiment as it runs.\n",
+    "実行IDがあるため、**RunDetails**ウィジェットを使用して、実行中の実験を表示できます。\n",
     "\n",
-    "> **Note**: The pipeline should complete quickly, because each step was configured to allow output reuse. This was done primarily for convenience and to save time in this course. In reality, you'd likely want the first step to run every time in case the data has changed, and trigger the subsequent steps only if the output from step one changes."
+    "> **Note**: 各ステップは出力の再利用を許可するように構成されているため、パイプラインは迅速に完了するはずです。これは、主に便宜上、このコースの時間を節約するために行われました。実際には、データが変更された場合に備えて毎回最初のステップを実行し、ステップ1からの出力が変更された場合にのみ後続のステップをトリガーします。"
    ]
   },
   {
@@ -149,9 +149,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Schedule the Pipeline\n",
+    "## パイプラインをスケジュールする\n",
     "\n",
-    "Suppose the clinic for the diabetes patients collects new data each week, and adds it to the dataset. You could run the pipeline every week to retrain the model with the new data."
+    "糖尿病患者の診療所が毎週新しいデータを収集し、それをデータセットに追加するとします。毎週パイプラインを実行して、新しいデータでモデルを再トレーニングできます。"
    ]
   },
   {
@@ -175,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can retrieve the schedules that are defined in thw workspace like this:"
+    "このようなワークスペースで定義されているスケジュールを取得できます:"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can check the latest run like this:"
+    "このように最新の実行を確認できます:"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **More Information**: You can find out more about scheduling pipelines in the [documentation](https://docs.microsoft.com/azure/machine-learning/how-to-schedule-pipelines)."
+    "> **詳しくは**: [ドキュメント](https://docs.microsoft.com/azure/machine-learning/how-to-schedule-pipelines)でパイプラインのスケジュールの詳細を確認できます。"
    ]
   }
  ],
