--- a/07A - Creating a Real-time Inferencing Service.ipynb
+++ b/07A - Creating a Real-time Inferencing Service.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a Real-Time Inferencing Service\n",
+    "# リアルタイム推論サービスの作成\n",
     "\n",
-    "You've spent a lot of time in this course training and registering machine learning models. Now it's time to deploy a model as a real-time service that clients can use to get predictions from new data.\n",
+    "このコースのトレーニングと機械学習モデルの登録には多くの時間を費やしました。次に、クライアントを使用して新しいデータから予測を取得できるリアルタイムサービスとしてモデルを展開します。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -33,9 +33,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train and Register a Model\n",
+    "## モデルのトレーニングと登録\n",
     "\n",
-    "Now let's train and register a model."
+    "それでは、モデルをトレーニングして登録しましょう。"
    ]
   },
   {
@@ -105,11 +105,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deploy a Model as a Web Service\n",
+    "## モデルをWebサービスとしてデプロイする\n",
     "\n",
-    "You have trained and registered a machine learning model that classifies patients based on the likelihood of them having diabetes. This model could be used in a production environment such as a doctor's surgery where only patients deemed to be at risk need to be subjected to a clinical test for diabetes. To support this scenario, you will deploy the model as a web service.\n",
+    "糖尿病の可能性に基づいて患者を分類する機械学習モデルをトレーニングして登録しました。このモデルは、リスクがあると考えられる患者のみが糖尿病の臨床検査を受ける必要がある医師の手術などの生産環境で使用できます。このシナリオをサポートするには、モデルをWebサービスとしてデプロイします。\n",
     "\n",
-    "First, let's determine what models you have registered in the workspace."
+    "最初に、ワークスペースに登録したモデルを決定しましょう。"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Right, now let's get the model that we want to deploy. By default, if we specify a model name, the latest version will be returned."
+    "それでは、デプロイしたいモデルを取得しましょう。デフォルトでは、モデル名を指定すると、最新バージョンが返されます。"
    ]
   },
   {
@@ -152,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're going to create a web service to host this model, and this will require some code and configuration files; so let's create a folder for those."
+    "このモデルをホストするWebサービスを作成します。これには、いくつかのコードと構成ファイルが必要です。それらのフォルダを作成しましょう。"
    ]
   },
   {
@@ -176,7 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The web service where we deploy the model will need some Python code to load the input data, get the model from the workspace, and generate and return predictions. We'll save this code in an *entry script* that will be deployed to the web service:"
+    "モデルをデプロイするWebサービスには、入力データをロードし、ワークスペースからモデルを取得し、予測を生成して返すためのPythonコードが必要です。このコードを、Webサービスにデプロイされる* entry script *に保存します:"
    ]
   },
   {
@@ -217,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The web service will be hosted in a container, and the container will need to install any required Python dependencies when it gets initialized. In this case, our scoring code requires **scikit-learn**, so we'll create a .yml file that tells the container host to install this into the environment."
+    "Webサービスはコンテナでホストされ、コンテナは初期化されたときに必要なPython依存関係をインストールする必要があります。この場合、スコア付けコードには**scikit-learn**が必要なので、コンテナホストにこれを環境にインストールするように指示する.ymlファイルを作成します。"
    ]
   },
   {
@@ -249,16 +249,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you're ready to deploy. We'll deploy the container a service named **diabetes-service**. The deployment process includes the following steps:\n",
+    "これでデプロイする準備ができました。 **diabetes-service**という名前のサービスをコンテナーにデプロイします。展開プロセスには次の手順が含まれます:\n",
     "\n",
-    "1. Define an inference configuration, which includes the scoring and environment files required to load and use the model.\n",
-    "2. Define a deployment configuration that defines the execution environment in which the service will be hosted. In this case, an Azure Container Instance.\n",
-    "3. Deploy the model as a web service.\n",
-    "4. Verify the status of the deployed service.\n",
+    "1. モデルをロードして使用するために必要なスコアリングおよび環境ファイルを含む推論構成を定義します。\n",
+    "2. サービスがホストされる実行環境を定義するデプロイメント構成を定義します。この場合、Azure Container Instance。\n",
+    "3. モデルをWebサービスとしてデプロイします。\n",
+    "4. デプロイされたサービスのステータスを確認します。\n",
     "\n",
-    "> **More Information**: For more details about model deployment, and options for target execution environments, see the [documentation](https://docs.microsoft.com/azure/machine-learning/how-to-deploy-and-where).\n",
+    "> **詳しくは**: モデルの展開およびターゲット実行環境のオプションの詳細については、[ドキュメント](https://docs.microsoft.com/azure/machine-learning/how-to-deploy-and-where)を参照してください。\n",
     "\n",
-    "Deployment will take some time as it first runs a process to create a container image, and then runs a process to create a web service based on the image. When deployment has completed successfully, you'll see a status of **Healthy**."
+    "展開では、最初にコンテナイメージを作成するプロセスを実行し、次にイメージに基づいてWebサービスを作成するプロセスを実行するため、時間がかかります。展開が正常に完了すると、**Healthy**のステータスが表示されます。"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hopefully, the deployment has been successful and you can see a status of **Healthy**. If not, you can use the following code to check the status and get the service logs to help you troubleshoot."
+    "うまくいけば、デプロイが成功し、**Healthy**のステータスを確認できるようになります。そうでない場合は、次のコードを使用してステータスを確認し、トラブルシューティングに役立つサービスログを取得できます。"
    ]
   },
   {
@@ -312,9 +312,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take a look at your workspace in [Azure ML Studio](https://ml.azure.com) and view the **Endpoints** page, which shows the deployed services in your workspace.\n",
+    "[Azure ML Studio](https://ml.azure.com)のワークスペースを見て、ワークスペースにデプロイされたサービスを示す**エンドポイント**ページを表示します。\n",
     "\n",
-    "You can also retrieve the names of web services in your workspace by running the following code:"
+    "次のコードを実行して、ワークスペース内のWebサービスの名前を取得することもできます:"
    ]
   },
   {
@@ -331,9 +331,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Use the Web Service\n",
+    "## Webサービスを使用する\n",
     "\n",
-    "With the service deployed, now you can consume it from a client application."
+    "サービスがデプロイされたら、クライアントアプリケーションからサービスを利用できるようになりました。"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can also send multiple patient observations to the service, and get back a prediction for each one."
+    "また、複数の患者の観察結果をサービスに送信し、それぞれの観察結果を取得することもできます。"
    ]
   },
   {
@@ -394,9 +394,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The code above uses the Azure ML SDK to connect to the containerized web service and use it to generate predictions from your diabetes classification model. In production, a model is likely to be consumed by business applications that do not use the Azure ML SDK, but simply make HTTP requests to the web service.\n",
+    "上記のコードは、Azure ML SDKを使用してコンテナー化されたWebサービスに接続し、それを使用して糖尿病分類モデルから予測を生成します。実稼働環境では、Azure ML SDKを使用せず、Webサービスに対してHTTPリクエストを行うだけのビジネスアプリケーションがモデルを使用する可能性があります。\n",
     "\n",
-    "Let's determine the URL to which these applications must submit their requests:"
+    "これらのアプリケーションがリクエストを送信する必要があるURLを決定しましょう:"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you know the endpoint URI, an application can simply make an HTTP request, sending the patient data in JSON (or binary) format, and receive back the predicted class(es)."
+    "エンドポイントURIがわかったので、アプリケーションは単純にHTTPリクエストを行い、患者データをJSON（またはバイナリ）形式で送信し、予測されたクラスを受け取ることができます。"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You've deployed your web service as an Azure Container Instance (ACI) service that requires no authentication. This is fine for development and testing, but for production you should consider deploying to an Azure Kubernetes Service (AKS) cluster and enabling authentication. This would require REST requests to include an **Authorization** header.\n",
+    "認証を必要としないAzure Container Instance（ACI）サービスとしてWebサービスをデプロイしました。これは開発とテストには適していますが、運用環境では、Azure Kubernetes Service（AKS）クラスターへのデプロイと認証の有効化を検討する必要があります。これには、REST要求に**Authorization**ヘッダーを含める必要があります。\n",
     "\n",
     "## Delete the Service\n",
     "\n",
