--- a/07B - Creating a Batch Inferencing Service.ipynb
+++ b/07B - Creating a Batch Inferencing Service.ipynb
@@ -6,15 +6,15 @@
     "collapsed": true
    },
    "source": [
-    "# Creating a Batch Inferencing Service\n",
+    "# バッチ推論サービスの作成\n",
     "\n",
-    "In previous labs, you used an Azure ML *pipeline* to automate the training and registration of a model, and you published a model as a web service for real-time *inferencing* (getting predictions from a model). Now you'll combine these two concepts to create a pipeline for *batch inferencing*. What does that mean? Well, imagine a health clinic takes patient measurements all day, saving the details for each patient in a separate file. Then overnight, the diabetes prediction model can be used to process all of the day's patient data as a batch, generating predictions that will be waiting the following morning so that the clinic can follow up with patients who are predicted to be at risk of diabetes. That's what you'll implement in this exercise.\n",
+    "以前のラボでは、Azure ML *パイプライン*を使用してモデルのトレーニングと登録を自動化し、リアルタイム*推論*（モデルから予測を取得する）のWebサービスとしてモデルを公開しました。次に、これら2つの概念を組み合わせて、*バッチ推論*のパイプラインを作成します。どういう意味ですか？ヘルスクリニックが1日中患者の測定を行い、各患者の詳細を個別のファイルに保存するとします。その後、夜通し、糖尿病予測モデルを使用して、その日の患者データをすべてバッチとして処理し、翌朝待機する予測を生成して、クリニックが糖尿病のリスクがあると予測される患者を追跡できるようにします。それがこの演習で実装するものです。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -35,11 +35,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train and Register a Model\n",
+    "## モデルのトレーニングと登録\n",
     "\n",
-    "If you have completed the previous lab in this course, you will have registered many versions of the **diabetes_model** model, and you're ready to go.\n",
+    "このコースの以前の実習ラボを修了している場合、**diabetes_model**モデルの多くのバージョンを登録しているので、すぐに使用できます。\n",
     "\n",
-    "If you haven't, you can run the cell below to train and register the model."
+    "そうでない場合は、下のセルを実行してモデルをトレーニングおよび登録できます。"
    ]
   },
   {
@@ -109,9 +109,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Generate and Upload Batch Data\n",
+    "## バッチデータの生成とアップロード\n",
     "\n",
-    "Since we don't actually have a fully staffed clinic with patients from whom to get new data for this course, you'll generate a random sample from our diabetes CSV file and use those to test the pipeline. Then you'll upload that data to a datastore in the Azure Machine Learning workspace and register a dataset for it."
+    "実際には、このコースの新しいデータを取得する患者がいる完全なスタッフの診療所がないため、糖尿病CSVファイルからランダムなサンプルを生成し、それらを使用してパイプラインをテストします。次に、そのデータをAzure Machine Learningワークスペースのデータストアにアップロードし、そのデータセットを登録します。"
    ]
   },
   {
@@ -160,9 +160,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create Compute\n",
+    "## Computeを作成\n",
     "\n",
-    "We'll need a compute context for the pipeline, so we'll use the Azure ML compute cluster you used in the previous exercises (it will be created if it doesn't already exist)."
+    "パイプラインの計算コンテキストが必要になるため、前の演習で使用したAzure ML計算クラスターを使用します（まだ存在しない場合は作成されます）。"
    ]
   },
   {
@@ -192,9 +192,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Create a Pipeline for Batch Inferencing\n",
+    "## バッチ推論用のパイプラインを作成する\n",
     "\n",
-    "Now we're ready to define the pipeline we'll use for batch inferencing. Our pipeline will need Python code to perform the batch inferencing, so let's create a folder where we can keep all the files used by the pipeline:"
+    "これで、バッチ推論に使用するパイプラインを定義する準備が整いました。パイプラインでは、バッチ推論を実行するためにPythonコードが必要になるため、パイプラインで使用されるすべてのファイルを保持できるフォルダーを作成しましょう:"
    ]
   },
   {
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll create a Python script to do the actual work, and save it in the pipeline folder:"
+    "次に、実際の作業を行うPythonスクリプトを作成し、パイプラインフォルダーに保存します:"
    ]
   },
   {
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we'll define a run context that includes the dependencies required by the script"
+    "次に、スクリプトに必要な依存関係を含む実行コンテキストを定義します"
    ]
   },
   {
@@ -287,9 +287,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You're going to use a pipeline to run the batch prediction script, generate predictions from the input data, and save the results as a text file in the output folder. To do this, you can use a **ParallelRunStep**, which enables the batch data to be processed in parallel and the results collated in a single output file named *parallel_run_step.txt*.\n",
+    "パイプラインを使用してバッチ予測スクリプトを実行し、入力データから予測を生成し、結果をテキストファイルとして出力フォルダーに保存します。これを行うには、**ParallelRunStep**を使用します。これにより、バッチデータを並列処理し、結果を*parallel_run_step.txt*という名前の単一の出力ファイルで照合できます。\n",
     "\n",
-    "So you'll need to import the library containing the **ParallelRunStep** class."
+    "したがって、**ParallelRunStep**クラスを含むライブラリをインポートする必要があります。"
    ]
   },
   {
@@ -305,7 +305,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "OK, now you're ready to define a **ParallelRunStep** pipeline step."
+    "OK、**ParallelRunStep**パイプラインステップを定義する準備ができました。"
    ]
   },
   {
@@ -351,9 +351,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now it's time to put the step into a pipeline, and run it.\n",
+    "次に、ステップをパイプラインに入れて実行します。\n",
     "\n",
-    "> **Note**: This may take some time!"
+    "> **Note**: これには時間がかかる場合があります！"
    ]
   },
   {
@@ -378,7 +378,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When the pipeline has finished running, the resulting predictions will have been saved in the outputs of the experiment associated with the first (and only) step in the pipeline. You can retrieve it as follows:"
+    "パイプラインの実行が終了すると、結果の予測は、パイプラインの最初の（そして唯一の）ステップに関連付けられた実験の出力に保存されます。次のように取得できます:"
    ]
   },
   {
@@ -414,9 +414,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Publish the Pipeline and use its REST Interface\n",
+    "## パイプラインを公開し、RESTインターフェイスを使用します\n",
     "\n",
-    "Now that you have a working pipeline for batch inferencing, you can publish it and use a REST endpoint to run it from an application."
+    "バッチ推論用の作業パイプラインができたので、それを公開し、RESTエンドポイントを使用してアプリケーションから実行できます。"
    ]
   },
   {
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the published pipeline has an endpoint, which you can see in the Azure portal. You can also find it as a property of the published pipeline object:"
+    "公開されたパイプラインにはエンドポイントがあり、Azureポータルで確認できます。また、公開されたパイプラインオブジェクトのプロパティとして見つけることもできます。:"
    ]
   },
   {
@@ -452,9 +452,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To use the endpoint, client applications need to make a REST call over HTTP. This request must be authenticated, so an authorization header is required. To test this out, we'll use the authorization header from your current connection to your Azure workspace, which you can get using the following code:\n",
+    "エンドポイントを使用するには、クライアントアプリケーションがHTTP経由でREST呼び出しを行う必要があります。この要求は認証される必要があるため、認証ヘッダーが必要です。これをテストするために、現在のAzureワークスペースへの接続の認証ヘッダーを使用します。これは、次のコードを使用して取得できます。\n",
     "\n",
-    "> **Note**: A real application would require a service principal with which to be authenticated."
+    "> **Note**: 実際のアプリケーションでは、認証に使用するサービスプリンシパルが必要です。"
    ]
   },
   {
@@ -474,7 +474,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we're ready to call the REST interface. The pipeline runs asynchronously, so we'll get an identifier back, which we can use to track the pipeline experiment as it runs:"
+    "これで、RESTインターフェースを呼び出す準備ができました。パイプラインは非同期に実行されるため、識別子を取得します。これを使用して、実行中のパイプラインの実験を追跡できます:"
    ]
   },
   {
@@ -497,7 +497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since we have the run ID, we can use the **RunDetails** widget to view the experiment as it runs:"
+    "実行IDがあるため、**RunDetails**ウィジェットを使用して、実行中の実験を表示できます:"
    ]
   },
   {
@@ -517,7 +517,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As before, the results are in the output of the first pipeline step:"
+    "前と同様に、結果は最初のパイプラインステップの出力にあります。:"
    ]
   },
   {
@@ -553,9 +553,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you have a pipeline that can be used to batch process daily patient data.\n",
+    "これで、毎日の患者データをバッチ処理するために使用できるパイプラインができました。\n",
     "\n",
-    "**More Information**: For more details about using pipelines for batch inferencing, see the [How to Run Batch Predictions](https://docs.microsoft.com/azure/machine-learning/how-to-run-batch-predictions) in the Azure Machine Learning documentation."
+    "**詳しくは**: バッチ推論にパイプラインを使用する方法の詳細については、Azure Machineの[バッチ予測の実行方法](https://docs.microsoft.com/azure/machine-learning/how-to-run-batch-predictions)を参照してください。学習ドキュメント。"
    ]
   }
  ],
