--- a/08B - Using Automated Machine Learning.ipynb
+++ b/08B - Using Automated Machine Learning.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Automated Machine Learning\n",
+    "# Automated Machine Learningの使用\n",
     "\n",
-    "There are many kinds of machine learning algorithm that you can use to train a model, and sometimes it's not easy to determine the most effective algorithm for your particular data and prediction requirements. Additionally, you can significantly affect the predictive performance of a model by preprocessing the training data, using techniques such as normalization, missing feature imputation, and others. In your quest to find the *best* model for your requirements, you may need to try many combinations of algorithms and preprocessing transformations; which takes a lot of time and compute resources.\n",
+    "モデルのトレーニングに使用できる機械学習アルゴリズムにはさまざまな種類があり、特定のデータおよび予測要件に最も効果的なアルゴリズムを決定するのは容易ではない場合があります。さらに、正規化、欠落した機能の代入などの手法を使用して、トレーニングデータを前処理することにより、モデルの予測パフォーマンスに大きな影響を与えることができます。要件に最適な*モデルを見つけるための探求では、アルゴリズムと前処理変換の多くの組み合わせを試す必要があります。これには多くの時間がかかり、リソースを計算します。\n",
     "\n",
-    "Azure Machine Learning enables you to automate the comparison of models trained using different algorithms and preprocessing options. You can use the visual interface in [Azure Machine Learning studio](https://ml/azure.com) or the SDK to leverage this capability. he SDK gives you greater control over the settings for the automated machine learning experiment, but the visual interface is easier to use. In this lab, you'll explore automated machine learning using the SDK.\n",
+    "Azure Machine Learningでは、さまざまなアルゴリズムと前処理オプションを使用してトレーニングされたモデルの比較を自動化できます。 [Azure Machine Learning studio](https：//ml/azure.com)のビジュアルインターフェイスまたはSDKを使用して、この機能を活用できます。 SDKを使用すると、自動化された機械学習実験の設定をより細かく制御できますが、視覚的なインターフェイスは使いやすくなっています。このラボでは、SDKを使用したAutomated Machine learningについて学習します。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -35,9 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Data for Automated Machine Learning\n",
+    "## Automated Machine Learning用のデータを準備する\n",
     "\n",
-    "You don't need to create a training script for automated machine learning, but you do need to load the training data."
+    "Automated Machine Learningのトレーニングスクリプトを作成する必要はありませんが、トレーニングデータを読み込む必要があります。"
    ]
   },
   {
@@ -57,9 +57,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configure Automated Machine Learning\n",
+    "## Automated Machine Learningを構成する\n",
     "\n",
-    "Now you're ready to configure the automated machine learning experiment. To do this, you'll need a run configuration that includes the required packages for the experiment environment, and a set of configuration settings that specifies how many combinations to try, which metric to use when evaluating models, and so on."
+    "これで、Automated Machine learning実験を構成する準備が整いました。これを行うには、実験環境に必要なパッケージを含む実行構成、試行する組み合わせの数、モデルを評価するときに使用するメトリックなどを指定する構成設定のセットが必要です。"
    ]
   },
   {
@@ -89,11 +89,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run an Automated Machine Learning Experiment\n",
+    "## Automated Machine learning実験を実行する\n",
     "\n",
-    "OK, you're ready to go. Let's run the automated machine learning experiment.\n",
+    "OK、準備完了です。自動化された機械学習実験を実行しましょう。\n",
     "\n",
-    "> **Note**: This will take a significant amount of time. Initially, the compute environment will need to be prepared. After this has been done, the experiment can start and progress will be displayed as each iteration completes. You can also monitor the compute and experiment status in [Azure Machine Learning studio](https://ml.azure.com)."
+    "> **Note**: これにはかなりの時間がかかります。最初に、コンピューティング環境を準備する必要があります。これが完了すると、実験が開始され、各反復が完了すると進行状況が表示されます。 [Azure Machine Learning studio](https://ml.azure.com)で計算と実験のステータスを監視することもできます."
    ]
   },
   {
@@ -118,12 +118,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determine the Best Performing Model\n",
+    "## 最高のパフォーマンスモデルを決定する\n",
     "\n",
-    "When the experiment has completed, view the output in the widget, and click the run that produced the best result to see its details.\n",
-    "Then click the link to view the experiment details in the Azure portal and view the overall experiment details before viewing the details for the individual run that produced the best result. There's lots of information here about the performance of the model generated.\n",
+    "実験が完了したら、ウィジェットで出力を表示し、最良の結果が得られた実行をクリックして詳細を表示します。\n",
+    "次に、リンクをクリックしてAzureポータルで実験の詳細を表示し、最良の結果をもたらした個々の実行の詳細を表示する前に、実験全体の詳細を表示します。ここには、生成されたモデルのパフォーマンスに関する多くの情報があります。\n",
     "\n",
-    "Let's get the best run and the model that it produced."
+    "最高の実行とそれが生成したモデルを取得しましょう。"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Automated machine learning includes the option to try preprocessing the data, which is accomplished through the use of [Scikit-Learn transformation pipelines](https://scikit-learn.org/stable/modules/compose.html#combining-estimators) (not to be confused with Azure Machine Learning pipelines!). These produce models that include steps to transform the data before inferencing. You can view the steps in a model like this:"
+    "Automated Machine learningには、[Scikit-Learn Transformationパイプライン]（https://scikit-learn.org/stable/modules/compose.html#combining-estimators）を使用して達成されるデータの前処理を試みるオプションが含まれますAzure Machine Learningパイプラインと混同しないでください！）。これらは、推論の前にデータを変換する手順を含むモデルを生成します。このようなモデルのステップを表示できます:"
    ]
   },
   {
@@ -162,7 +162,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, having found the best performing model, you can register it."
+    "最後に、最良のパフォーマンスのモデルを見つけたら、それを登録できます。"
    ]
   },
   {
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **More Information**: For more information Automated machine Learning, see the [Azure ML documentation](https://docs.microsoft.com/azure/machine-learning/how-to-configure-auto-train)."
+    "> **詳しくは**: Automated Machine learningの詳細については、[Azure MLドキュメント](https://docs.microsoft.com/azure/machine-learning/how-to-configure-auto-train)を参照してください。."
    ]
   }
  ],
