--- a/08A - Tuning Hyperparameters.ipynb
+++ b/08A - Tuning Hyperparameters.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tuning Hyperparameters\n",
+    "# ハイパーパラメーターの調整\n",
     "\n",
-    "There are many machine learning algorithms that require *hyperparameters* (parameter values that influence training, but can't be determined from the training data itself). For example, when training a logistic regression model, you can use a *regularization rate* hyperparameter to counteract bias in the model; or when training a convolutional neural network, you can use hyperparameters like *learning rate* and *batch size* to control how weights are adjusted and how many data items are processed in a mini-batch respectively. The choice of hyperparameter values can significantly affect the performance of a trained model, or the time taken to train it; and often you need to try multiple combinations to find the optimal solution.\n",
+    "*ハイパーパラメーター*（トレーニングに影響を与えるが、トレーニングデータ自体から決定できないパラメーター値）を必要とする多くの機械学習アルゴリズムがあります。たとえば、ロジスティック回帰モデルをトレーニングする場合、* regularization rate *ハイパーパラメーターを使用してモデルのバイアスに対抗できます。または畳み込みニューラルネットワークをトレーニングする場合、*学習率*や*バッチサイズ*などのハイパーパラメーターを使用して、重みの調整方法とミニバッチで処理されるデータ項目の数をそれぞれ制御できます。ハイパーパラメーター値の選択は、トレーニング済みモデルのパフォーマンス、またはトレーニングにかかる​​時間に大きく影響する可能性があります。多くの場合、最適なソリューションを見つけるために複数の組み合わせを試す必要があります。\n",
     "\n",
-    "In this case, you'll use a simple example of a logistic regression model with a single hyperparameter, but the principles apply to any kind of model you can train with Azure Machine Learning.\n",
+    "この場合、単一のハイパーパラメーターを持つロジスティック回帰モデルの簡単な例を使用しますが、原則はAzure Machine Learningでトレーニングできるあらゆる種類のモデルに適用されます。\n",
     "\n",
-    "## Connect to Your Workspace\n",
+    "## ワークスペースに接続する\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -35,9 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare Data for an Experiment\n",
+    "## 実験用のデータを準備する\n",
     "\n",
-    "In this lab, you'll use a dataset containing details of diabetes patients. Run the cell below to create this dataset (if you created it in the previous lab, the code will create a new version)"
+    "このラボでは、糖尿病患者の詳細を含むデータセットを使用します。以下のセルを実行して、このデータセットを作成します（以前のラボで作成した場合、コードは新しいバージョンを作成します）"
    ]
   },
   {
@@ -71,9 +71,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare a Training Script\n",
+    "## トレーニングスクリプトを準備する\n",
     "\n",
-    "Let's start by creating a folder for the training script you'll use to train a logistic regression model."
+    "まず、ロジスティック回帰モデルのトレーニングに使用するトレーニングスクリプト用のフォルダーを作成することから始めましょう。"
    ]
   },
   {
@@ -94,10 +94,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now create the Python script to train the model. This must include:\n",
+    "次に、モデルをトレーニングするPythonスクリプトを作成します。これには:\n",
     "\n",
-    "- A parameter for each hyperparameter you want to optimize (in this case, there's only the regularization hyperparameter)\n",
-    "- Code to log the performance metric you want to optimize for (in this case, you'll log both AUC and accuracy, so you can choose to optimize the model for either of these)"
+    "- 最適化する各ハイパーパラメーターのパラメーター（この場合、正則化ハイパーパラメーターのみがあります）\n",
+    "- 最適化するパフォーマンスメトリックを記録するコード（この場合、AUCと精度の両方を記録するため、これらのいずれかに対してモデルを最適化することを選択できます）"
    ]
   },
   {
@@ -165,11 +165,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare a Compute Target\n",
+    "## 計算ターゲットを準備する\n",
     "\n",
-    "One of the benefits of cloud compute is that it scales on-demand, enabling you to provision enough compute resources to process multiple runs of an experiment in parallel, each with different hyperparameter values.\n",
+    "クラウドコンピューティングの利点の1つは、オンデマンドでスケーリングできることです。これにより、それぞれが異なるハイパーパラメーター値を持つ実験の複数の実行を並行して処理するのに十分なコンピューティングリソースをプロビジョニングできます。\n",
     "\n",
-    "You'll use the **aml-cluster** Azure Machine Learning compute cluster you created in an earlier lab (if it doesn't exist, it will be created)."
+    "以前のラボで作成した** aml-cluster ** Azure Machine Learning計算クラスターを使用します（存在しない場合は作成されます）。"
    ]
   },
   {
@@ -199,9 +199,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run a *Hyperdrive* Experiment\n",
+    "## *ハイパードライブ*実験を実行する\n",
     "\n",
-    "Azure Machine Learning includes a hyperparameter tuning capability through *Hyperdrive* experiments. These experiments launch multiple child runs, each with a different hyperparameter combination. The run producing the best model (as determined by the logged target performance metric for which you want to optimize) can be identified, and its trained model selected for registration and deployment."
+    "Azure Machine Learningには、*Hyperdrive*実験によるハイパーパラメーター調整機能が含まれています。これらの実験は、それぞれが異なるハイパーパラメーターの組み合わせを持つ複数の子ランを起動します。最適化するログ記録されたターゲットパフォーマンスメトリックによって決定される最適なモデルを生成する実行を識別し、そのトレーニング済みモデルを登録および展開用に選択します。"
    ]
   },
   {
@@ -258,13 +258,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can view the experiment run status in the widget above. You can also view the main Hyperdrive experiment run and its child runs in [Azure Machine Learning studio](https://ml.azure.com).\n",
+    "上記のウィジェットで実験の実行ステータスを表示できます。 [Azure Machine Learning studio](https://ml.azure.com)でメインのHyperdrive実験の実行とその子の実行を表示することもできます。\n",
     "\n",
-    "> **Note**: You may see some error messages in the widget, reporting that non-numeric target metrics can't be plotted. You can ignore these!\n",
+    "> **Note**: ウィジェットにいくつかのエラーメッセージが表示され、数値以外のターゲットメトリックをプロットできないことが報告される場合があります。これらは無視できます！\n",
     "\n",
-    "## Determine the Best Performing Run\n",
+    "## ベストパフォーマンスの実行を決定する\n",
     "\n",
-    "When all of the runs have finished, you can find the best one based on the performance metric you specified (in this case, the one with the best AUC)."
+    "すべての実行が終了すると、指定したパフォーマンスメトリックに基づいて最適なものを見つけることができます（この場合、AUCが最適なもの）。"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you've found the best run, you can register the model it trained."
+    "最良の実行が見つかったので、トレーニングしたモデルを登録できます。"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **More Information**: For more information about Hyperdrive, see the [Azure ML documentation](https://docs.microsoft.com/azure/machine-learning/how-to-tune-hyperparameters)."
+    "> **詳しくは**: Hyperdriveの詳細については、[Azure MLドキュメント](https://docs.microsoft.com/azure/machine-learning/how-to-tune-hyperparameters)を参照してください。"
    ]
   }
  ],
