--- a/09B - Interpreting Models.ipynb
+++ b/09B - Interpreting Models.ipynb
@@ -4,18 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interpreting Models\n",
+    "# モデルの解釈\n",
     "\n",
-    "You can use Azure Machine Learning to interpret a model by using an *explainer* that quantifies the amount of influence each feature contribues to the predicted label. There are many common explainers, each suitable for different kinds of modeling algorithm; but the basic approach to using them is the same."
+    "Azure Machine Learningを使用して、各機能が予測ラベルに与える影響の量を定量化する*説明者*を使用して、モデルを解釈できます。多くの一般的な説明者がいて、それぞれ異なる種類のモデリングアルゴリズムに適しています。しかし、それらを使用する基本的なアプローチは同じです。"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explain a Model\n",
+    "## モデルの説明\n",
     "\n",
-    "Let's start with a model that is trained outside of Azure Machine Learning - Run the cell below to train a decision tree classification model."
+    "Azure Machine Learningの外部でトレーニングされたモデルから始めましょう-下のセルを実行して、決定木分類モデルをトレーニングします。"
    ]
   },
   {
@@ -65,10 +65,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The training process generated some model evaluation meytrics based on a hold-back validation dataset, so you have an idea of how accurately it predicts; but how do the features in the data influence the prediction?\n",
+    "トレーニングプロセスでは、ホールドバック検証データセットに基づいていくつかのモデル評価メトリクスが生成されたため、予測の正確性についてのアイデアが得られます。しかし、データの特徴は予測にどのように影響しますか？\n",
     "\n",
-    "### Install the Azure ML Interpretability Library\n",
-    "To find out, first install the Azure ML Interpretability library. You can use this to interpret many typical kinds of model, even if they haven't been trained in an Azure ML experiment or registered in an Azure ML workspace."
+    "### Azure ML Interpretability Libraryをインストールする\n",
+    "調べるには、まずAzure ML Interpretabilityライブラリをインストールします。これを使用して、Azure ML実験でトレーニングされていない場合や、Azure MLワークスペースに登録されていない場合でも、多くの一般的な種類のモデルを解釈できます。"
    ]
   },
   {
@@ -86,9 +86,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get an Explainer for our Model\n",
+    "### モデルの説明を取得する\n",
     "\n",
-    "Noe that you have the library installed, let's get a suitable explainer for the model. There are many kinds of explainer. In this example you'll use a *Tabular Explainer*, which is a \"black box\" explainer that can be used to explain many kinds of model by invoking an appropriate [SHAP](https://github.com/slundberg/shap) model explainer."
+    "ライブラリがインストールされていることに注意してください。モデルに適した説明者を取得しましょう。説明者には多くの種類があります。この例では、* Tabular Explainer *を使用します。これは、適切な[SHAP](https://github.com/slundberg/shap)モデルExplainerを呼び出すことで、多くの種類のモデルを説明するために使用できる\ "ブラックボックス\" Explainerです。"
    ]
   },
   {
@@ -111,9 +111,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Get Global Feature Importance\n",
+    "### グローバル機能の重要性を取得\n",
     "\n",
-    "The first thing to do is try to explain the model by evaluating the overall *feature importance* - in other words, quantifying the extent to which each feature influences the prediction based on the whole training dataset."
+    "最初に行うことは、全体的な*機能の重要度*を評価することでモデルを説明することです。つまり、トレーニングデータセット全体に基づいて、各機能が予測に影響を与える程度を定量化します。"
    ]
   },
   {
@@ -135,11 +135,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The feature importance is ranked, with the most important feature listed first.\n",
+    "機能の重要度がランク付けされ、最も重要な機能が最初にリストされます。\n",
     "\n",
     "### Get Local Feature Importance\n",
     "\n",
-    "So you have an overall view, but what about explaining individual observations? Let's generate *local* explanations for individual predictions, quantifying the extent to which each feature influenced the decision to predict each of the possible label values. In this case, it's a binary model, so there are two possible labels (non-diabetic and diabetic); and you can quantify the influence of each feature for each of these label values for individual observations in a dataset. You'll just evaluate the first two cases in the test dataset."
+    "全体像はありますが、個々の観察結果の説明はどうですか？個々の予測の*ローカル*説明を生成し、各ラベルが可能なラベル値を予測する決定に影響する程度を定量化します。この場合、バイナリモデルであるため、2つのラベル（非糖尿病と糖尿病）があります。データセット内の個々の観測値について、これらのラベル値ごとに各特徴の影響を定量化できます。テストデータセットの最初の2つのケースを評価するだけです。"
    ]
   },
   {
@@ -181,13 +181,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Adding Explainability to Azure ML Models Training Experiments\n",
+    "## Azure MLモデルのトレーニング実験に説明可能性を追加する\n",
     "\n",
-    "As you've seen, you can generate explanations for models trained outside of Azure ML; but when you use experiments to train models in your Azure ML workspace, you can generate model explanations and log them.\n",
+    "これまで見てきたように、Azure MLの外部でトレーニングされたモデルの説明を生成できます。ただし、実験を使用してAzure MLワークスペースでモデルをトレーニングする場合、モデルの説明を生成してログに記録できます。\n",
     "\n",
-    "The first thing you need to do is to connect to your workspace using the Azure ML SDK.\n",
+    "最初に行う必要があるのは、Azure ML SDKを使用してワークスペースに接続することです。\n",
     "\n",
-    "> **Note**: If the authenticated session with your Azure subscription has expired since you completed the previous exercise, you'll be prompted to reauthenticate."
+    "> **Note**: 前の演習を完了してから、Azureサブスクリプションとの認証済みセッションの有効期限が切れた場合、再認証するように求められます。"
    ]
   },
   {
@@ -208,9 +208,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Train and Explain a Model using an Experiment\n",
+    "### 実験を使用したモデルのトレーニングと説明\n",
     "\n",
-    "OK, let's create an experiment and put the files it needs in a local folder - in this case we'll just use the same CSV file of diabetes data to train the model."
+    "さて、実験を作成して、必要なファイルをローカルフォルダーに配置しましょう。この場合、糖尿病データの同じCSVファイルを使用してモデルをトレーニングします。"
    ]
   },
   {
@@ -234,10 +234,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we'll create a training script that looks similar to any other Azure ML training script except that is includes the following features:\n",
+    "次の機能を含むことを除いて、他のAzure MLトレーニングスクリプトに似たトレーニングスクリプトを作成します。\n",
     "\n",
-    "- The same libraries to generate model explanations we used before are imported and used to generate a global explanation\n",
-    "- The **ExplanationClient** library is used to upload the explanation to the experiment output"
+    "- 以前に使用したモデルの説明を生成するための同じライブラリがインポートされ、グローバルな説明の生成に使用されます\n",
+    "- **ExplanationClient**ライブラリーは、実験の出力に説明をアップロードするために使用されます"
    ]
   },
   {
@@ -313,7 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you can run the experiment, using an estimator to run the training script. Note that the **azureml-interpret** library is included in the training environment so the script can create a **TabularExplainer**, and the **azureml-contrib-interpret** package is included so the script can use the **ExplainerClient** class."
+    "これで、推定器を使用してトレーニングスクリプトを実行し、実験を実行できます。 **azureml-interpret**ライブラリはトレーニング環境に含まれているため、スクリプトは** TabularExplainer **を作成でき、**azureml-contrib-interpret**パッケージが含まれているため、スクリプトは**ExplainerClient**クラス。"
    ]
   },
   {
@@ -358,9 +358,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Retrieve the Feature Importance Values\n",
+    "## 機能の重要度の値を取得する\n",
     "\n",
-    "With the experiment run completed, you can use the **ExplanationClient** class to retrieve the feature importance from the explanation registered for the run."
+    "実験の実行が完了したら、**ExplanationClient**クラスを使用して、実行用に登録された説明から機能の重要度を取得できます。"
    ]
   },
   {
@@ -386,11 +386,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## View the Model Explanation in Azure Machine Learning studio\n",
+    "## Azure Machine Learning Studioでモデルの説明を表示する\n",
     "\n",
-    "You can also click the link in the Run Details widget to see the run in Azure Machine Learning studio, and view the **Explanations** tab. Then:\n",
+    "[実行の詳細]ウィジェットのリンクをクリックして、Azure Machine Learning Studioで実行を確認し、[*explainer*]タブを表示することもできます。次に：\n",
     "\n",
-    "1. Select the **Tabular Explanation** explainer.\n",
+    "1. explainerに**Tabular Explanation**を選択します。.\n",
     "2. View the **Global Importance** chart, which shows the overall global feature importance.\n",
     "3. View the **Summary Importance** chart, which shows each data point from the test data in a *swarm*, *violin*, or *box* plot.\n",
     "4. Select an individual point to see the **Local Feature Importance** for the individual prediction for the selected data point.\n"
